--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "apx",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^11.10.0",
+    "firebase": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.7.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.0.0",
     "vite": "^4.5.14"
   }
 }
