--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
     "firebase": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
+    "react-select": "^5.10.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
