--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
-VITE_API_BASE_URL=http://localhost:8081/lanahub
+VITE_API_URL = http://localhost:8081
+VITE_API_BASE_URL=`${VITE_API_URL}/lanahub`
 VITE_APP_ID=123
 VITE_API_VERSION=v1
