--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-VITE_API_BASE_URL=http://localhost:8081/lanahub
+VITE_API_URL = https://eff82053d7cf.ngrok-free.app
+VITE_API_BASE_URL=`${VITE_API_URL}/lanahub`
 VITE_APP_ID=456
 VITE_API_VERSION=v1
